Goblin Camp Changelog

-- version 0.24 (future release) --
* Improve key press efficiency when no key is pressed ()

-- version 0.23 (2023-07-09) --

* Fix support for graphical tiles in SDL2:
  - Restore basic functionality restored (2e1e9d63)
  - Fixed Loading screen in threads mode in SDL2 renderer (5d773831)
  - Fix problem with cursor position calculation in SDL2 renderer (020252a8)
  - Fix problem with not all tile icons have been shown, unless tileset is reloaded while game is already running (4309f1a8)
  - Fix drag-n-drop camera movement ratio for graphical tiles (925ff077 and b4770736)
  - Add "Classical Text Mode" item to tileset list to switch text-only mode on and off (c47d4f1c)
  - Fix keyboard scrolling rate for big graphical tiles (049f2315)
* Added double sized version of Default Tileset to play on screens with high DPI (11f2623f)
* Fix libtcod deprecation warnings:
  - TCODColor deprecation warnings (0adc0bca, d055503b)
  - TCODConsole::print deprecation warnings in GCamp.cpp (9d2790d9, 77b4aca6, 2d052fd2, 40f19efe)

-- version 0.221 (2022-08-01) --

Bugfix release

* Fix problem with StockManager Dialog bigger than screen size (ddf18716)

-- version 0.22 (2022-07-31) --

Main goal of this release is to make Goblin Camp build and run on modern systems. No new
features added. Main changes:

* Build system changed to Cmake. Jam build files was removed;
* Fix building with modern Boost library. Boost code embedded into GC distribution was removed;
* Added support for python 3.x. Now you can build GC both with python 2.7 and 3.x;
* Fix building with modern tcod library. Old tcod embedded into GC distribution was removed;
* Switched from SDL to SDL2 (forced by tcod library);
* Added building option to disable threads in GC. Might be useful for debugging;
* Code refactoring: changed directory structure a bit; removed DOS line feeds;
* Added larger bitmap font by default, to make game playable on modern screens with high resolution.

Thanks to:
