@@ -1,7 +1,8 @@
 Goblin Camp Changelog
 
 -- version 0.24 (future release) --
-* Improve key press efficiency when no key is pressed ()
+* Improve key press efficiency when no key is pressed (c1183040)
+* Fix Dev Console to work with python3 ()
 
 -- version 0.23 (2023-07-09) --
 
